# Simulador-Agil

./: LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  dados.json  pyproject.toml
backend/simulado_gen/: main.py
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  App.module.css  Simulado.jsx  index.css
frontend/: package-lock.json  package.json
frontend/src/: App.module.css
server/: pyproject.toml
server/simulado_gen/: data.py  main.py
